--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,69 @@
 hehe.mp4
 *.pdf
 *.jpg
+extra assets/__MACOSX linked/._GitHub-Logos
+*.DS_Store
+*.ai
+*.eps
+*.psd
+extra assets/__MACOSX linked/GitHub-Logos/._README.txt
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/._Print
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/._Screen
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._2-Color
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._2-Color Reversed
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._Black
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._White
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/2-Color Reversed/._CMYK
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/2-Color Reversed/._PMS
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/2-Color/._CMYK
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/2-Color/._PMS
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._2-Color
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._2-Color Reversed
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._Black
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._White
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/._Print
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/._Screen
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/Print/._2-Color
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/Print/._2-Color Reversed
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/Print/._Black
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/Print/._White
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/Print/2-Color Reversed/._CMYK
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/Print/2-Color Reversed/._PMS
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/Print/2-Color/._CMYK
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/Print/2-Color/._PMS
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/Screen/._2-Color
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/Screen/._2-Color Reversed
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/Screen/._Black
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn logo/Screen/._White
+extra assets/GitHub-Logos/README.txt
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/._Print
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/._Screen
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._2-Color
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._2-Color Reversed
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._Black
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._White
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/2-Color Reversed/._CMYK
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/2-Color Reversed/._PMS
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/2-Color/._CMYK
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/2-Color/._PMS
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._2-Color
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._2-Color Reversed
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._Black
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._White
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/._Print
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/._Print
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._White
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._White
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._Black
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._2-Color Reversed
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Screen/._2-Color
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/2-Color/._PMS
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/2-Color/._CMYK
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/2-Color Reversed/._PMS
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/2-Color Reversed/._CMYK
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._White
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._Black
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._2-Color Reversed
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._2-Color
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/._Screen
+extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/._Print
