--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._2-Color
 extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/Print/._2-Color
 extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/._Screen
 extra assets/__MACOSX linked/linkedin_logo_package/LinkedIn [in]/._Print
+index.html
